--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
     "Online",
     "Tic-Tac-Toe"
   ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/deepakrai89/online-tic-tac-toe"
+  },
   "author": "Deepak Rai",
   "license": "ISC"
 }
